Add directional influence to Smash launches
- apply one-time DI after Smash launch scaling using held movement input
- let jump and block influence vertical DI for up/down angle control
- add tests for upward DI on hits and sideways DI on vertical launches